boreal/tests/assets/invalid_files/compilation/unknown_import.yar
// [error: unknown import bags]
rule a {
    condition: true
}

import "bags"
